# clicker-in-rust

./: Cargo.toml  README.md  index.html
.github/workflows/: build.yaml
locales/: en.json
src/: lib.rs  main.rs
src/components/: app.rs  hexagon.rs  hexgrid.rs  lifespan.rs  mod.rs  pause_toggle.rs  progress_bar.rs  svg.rs
src/scss/: main.scss  pause_toggle.scss  progress_bar.scss
src/utils/: hex2d.rs  mod.rs  stats.rs  vec2d.rs
