[package]
name = "clicker"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }
web-sys = { version = "0.3.77", features = ["Document", "DocumentTimeline"]}
turf = "0.10.1"
rust-i18n = "3"
icondata_fi = "0.1.0"
icondata = "0.6.0"
leptos_icons = "0.6.1"
leptos_meta = "0.8.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.i18n]
available-locales = ["en"]
default-locale = "en"
load-path = "locales"
